test/e2e/fixtures/tcpmapping-sni-shared-context/queries.json
[
  {
    "url": "/",
    "method": "GET",
    "headers": {
      "Host": "a.sni-shared.example.com"
    },
    "sni": true,
    "insecure": true
  },
  {
    "url": "/",
    "method": "GET",
    "headers": {
      "Host": "b.sni-shared.example.com"
    },
    "sni": true,
    "insecure": true
  }
]
